# shared-server

./: .gitignore  README.md  pyproject.toml
deployment/waitress/: shared_server.py  tray_menu.py
src/: app.py  config.py
src/routes/: __init__.py  files.py  pages.py
src/services/: file_storage.py
