[tool.poetry]
name = "shared-server"
version = "0.1.0"
description = ""
authors = ["Dan Gost <dangost16@gmail.com>"]
license = "Apache 2"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
Flask = "^2.2.2"
pystray = "^0.19.4"
pyinstaller = "^5.6.1"
requests = "^2.28.1"
python-dotenv = "^0.21.0"
waitress = "^2.1.2"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
